<resources>
    <string name="app_name">E-Learning</string>
    <string name="hello">Hi, </string>
    <string name="gamtenk">gamtenk</string>
    <string name="serach_elements">serach elements</string>
    <string name="kelas">Kelas</string>
    <string name="mesagge">Mesagge</string>
    <string name="absen">Absen</string>
    <string name="daftar_matkul">Daftar Matkul</string>
    <string name="trending">Announcement</string>
    <string name="dummy_text">Pengumuman Bagian Keuangan Terkait UAS
Rabu, 26 Januari 2022, Dipublish oleh : Febryan Ervan (Biro Administrasi Akademi/BAAK UCIC)</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="profil_mahasiswa">Profil Mahasiswa</string>
    <string name="carles_puyol">Carles Puyol</string>
    <string name="_2019102018">2019102018</string>
    <string name="ti_se_i_5">TI-SE i/5</string>
    <string name="student_exchange_fotografi">Student Exchange Fotografi</string>
    <string name="senin_12_30_14_10">Senin, 12:30 - 14:10</string>
    <string name="ine_rachmawati_m_sn">Ine Rachmawati, M.Sn.</string>
    <string name="_2_sks">2 sks</string>
    <string name="_3_sks">3 sks</string>
    <string name="software_quality_assurance">Software Quality Assurance</string>
    <string name="selasa_07_30_09_30">Selasa, 07:30 - 09:30</string>
    <string name="ridho_taufiq_subagio_m_kom">Ridho Taufiq Subagio, M.Kom</string>
    <string name="ui_ux_designer">UI UX Designer</string>
    <string name="selasa_09_30_11_30">Selasa, 09:30 - 11:30</string>
    <string name="rifqi_fahrudin_m_kom">Rifqi Fahrudin, M.Kom</string>
    <string name="internet_of_things">Internet of Things</string>
    <string name="muhammad_afif_sulhan_m_kom">Muhammad Afif Sulhan, M.Kom</string>
    <string name="pengembangan_aplikasi_mobile">Pengembangan Aplikasi Mobile</string>
    <string name="rabu_12_30_14_30">Rabu, 12:30 - 14:30</string>
    <string name="rabu_09_30_11_30">Rabu, 09:30 - 11:30</string>
    <string name="ilwan_syafrinal_m_kom">Ilwan Syafrinal,M.Kom</string>
    <string name="student_exchange_kmmi">Student Exchange KMMI</string>
    <string name="metode_numerik">Metode Numerik</string>
    <string name="kamis_12_30_14_30">Kamis, 12:30 - 14:30</string>
    <string name="masrani_asfi_m_si">Masrani Asfi, M.Si.</string>
    <string name="kusnadi_m_kom">Kusnadi, M.Kom.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>